[package]
name = "npg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
types = { git = "https://github.com/sigp/lighthouse", branch = "unstable" }
slot_clock = { git = "https://github.com/sigp/lighthouse", branch = "unstable" }
tokio = { version = "1.21.1", features = [ "time", "macros", "rt" ] }
futures = "0.3.24"
strum = { version = "0.24", features = ["derive"] }
rand = "0.8.5"

[patch]
[patch.crates-io]
eth2_ssz = { git = "https://github.com/sigp/lighthouse", branch = "unstable" }
eth2_ssz_types = { git = "https://github.com/sigp/lighthouse", branch = "unstable" }
eth2_hashing = { git = "https://github.com/sigp/lighthouse", branch = "unstable" }
tree_hash = { git = "https://github.com/sigp/lighthouse", branch = "unstable" }
eth2_serde_utils = { git = "https://github.com/sigp/lighthouse", branch = "unstable" }


